...

    var identifier: String {
        switch self {
        case .newArrangement: return "bar-new-arrangement"
        case .moveToPiece:    return "bar-move"
        case .addToSetlist:   return "bar-setlists"
        case .newSetlist:     return "bar-new-setlist"
        case .combine:        return "bar-combine"
        case .duplicate:      return "bar-duplicate"
        case .delete:         return "bar-delete"
        }
    }

...
